style: fix z-index

--- a/src/components/play-button/play-button.module.css
+++ b/src/components/play-button/play-button.module.css
@@ -1,5 +1,6 @@
 .playButton {
   position: sticky;
+  z-index: 10;
   top: 30px;
   display: flex;
   width: 150px;
